# ashare-mcp

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: lint.yml
docs/: akshare-contract.md  baostock-contract.md
src/ashare_mcp/: __init__.py  __main__.py  akshare_source.py  baostock_client.py  derivations.py  errors.py  server.py  utils.py
src/ashare_mcp/tools/: __init__.py  akshare_financial.py  financial.py  index.py  macro.py  market.py  technical.py  valuation.py
typings/akshare/: __init__.pyi
typings/baostock/: __init__.pyi
typings/baostock/common/: contants.pyi
typings/baostock/corpreport/: corp_performance.pyi
typings/baostock/data/: messageheader.pyi  resultset.pyi
typings/baostock/evaluation/: season_index.pyi
typings/baostock/login/: loginout.pyi
typings/baostock/macroscopic/: economic_data.pyi
typings/baostock/metadata/: stock_metadata.pyi
typings/baostock/security/: history.pyi  sectorinfo.pyi
typings/baostock/util/: socketutil.pyi  stringutil.pyi
typings/ta/: __init__.pyi  momentum.pyi  others.pyi  trend.pyi  utils.pyi  volatility.pyi  volume.pyi  wrapper.pyi
