[project]
name = "ashare-mcp"
version = "0.2.0"
description = "A-Share market data MCP server backed by baostock"
requires-python = ">=3.12"
dependencies = [
    "baostock>=0.9.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "ta>=0.11.0",
    "mcp[cli]>=1.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
akshare = ["akshare>=1.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashare_mcp"]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.260113",
    "pyright>=1.1.410",
    "ruff>=0.15.15",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnnecessaryTypeIgnoreComment = true
ignore = ["typings"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
# typings/ is pyright --createstub output for third-party libs, not our own code.
# Without excluding it, select=["ALL"] floods the report with generated-stub lint.
extend-exclude = ["typings"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
# *args: Any, **kwargs: Any is the standard PEP-612 escape hatch for
# passthrough overrides (where ParamSpec triggers a pyright LSP false-positive
# on method override, see pyright#5750). ANN401 still applies to ordinary args.
allow-star-arg-any = true

[tool.ruff.lint.pylint]
max-args = 6
